--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,6 @@ language: php
 php:
   # using major version aliases
 
-  # aliased to 5.2.17
-  - 5.2
-  # aliased to a recent 5.3.x version
-  - 5.3
   # aliased to a recent 5.4.x version
   - 5.4
   # aliased to a recent 5.5.x version
@@ -16,4 +12,4 @@ php:
 
 # optionally specify a list of environments, for example to test different RDBMS
 env:
-  - DB=mysql
+  #- DB=mysql
